--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ importFrom(graphics, plot)
 exportClasses(CTMC, BDMC, CTMC_PO_1, CTMC_PO_many)
 exportMethods(BDsummaryStats, BDsummaryStats.PO)
 exportMethods(getStates, getTimes, getT)
+exportMethods(getBDMCsPOlist)
 exportMethods(plot)
 exportMethods( "[", "[[")
 export(BDloglikelihood.PO)
