--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -1,5 +1,4 @@
 # HORRIBLY DANGEROUS: this removes ALL TEX FILES! So they don't ship with the package.
-# [I have now removed  the delete-the-latex-files line from 'all'; the  tex files might as well ship with the package]
 #rm -rf ${TEXSOURCE}
 #rm -rf .tex *.ps *.dvi
 #	pdflatex ${TEXSOURCE}	##THIS DOENST WORK FOR SOME REASON
@@ -9,10 +8,10 @@
 PDFS = BD_EM.pdf BD_EM_wImmig.pdf BD_MCMC.pdf sim_condBD.pdf
 
 all: ${PDFS}
-	rm -rf *.ps *.dvi *.aux *.bbl *.blg *.log
+	rm -rf *.tex *.ps *.dvi *.aux *.bbl *.blg *.log
 
 .Rnw.tex:
-	R CMD Sweave $<
+	"$(R_HOME)/bin/R" CMD Sweave $<
 
 .tex.dvi:
 	latex $<
@@ -27,4 +26,4 @@ all: ${PDFS}
 	ps2pdf $<
 
 clean:
-	rm -rf *.ps *.dvi *.aux *.bbl *.blg *.log
+	rm -rf *.tex *.ps *.dvi *.aux *.bbl *.blg *.log
