--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,15 @@ Package: DOBAD
 Type: Package
 Title: Analysis of Discretely Observed linear
         Birth-And-Death(-and-immigration) Markov Chains
-Version: 1.0
+Version: 1.0.1
 Date: 2010-12-21
-Author: Charles Doss
+Author: Charles Doss, Vladimir Minin, Marc Suchard
 Maintainer: Charles Doss <cdoss@stat.washington.edu>
 Description: Frequentist (EM) and Bayesian (MCMC) Methods for Inference
         of Birth-Death-Immigration Markov Chains
 License: GPL (>= 2)
-Depends: methods, lattice, numDeriv
+Depends: methods, lattice, numDeriv, Matrix
 LazyLoad: yes
-Packaged: 2010-12-27 20:33:45 UTC; charles
+Packaged: 2012-01-18 04:11:40 UTC; cdoss
 Repository: CRAN
-Date/Publication: 2011-01-03 12:27:35
+Date/Publication: 2012-01-18 08:22:33
