--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,17 @@ Package: DOBAD
 Type: Package
 Title: Analysis of Discretely Observed linear
         Birth-And-Death(-and-immigration) Markov Chains
-Version: 1.0.1
-Date: 2010-12-21
+Version: 1.0.3
+Date: 2014-2-20
 Author: Charles Doss, Vladimir Minin, Marc Suchard
-Maintainer: Charles Doss <cdoss@stat.washington.edu>
-Description: Frequentist (EM) and Bayesian (MCMC) Methods for Inference
-        of Birth-Death-Immigration Markov Chains
+Maintainer: Charles Doss <cdoss@umn.edu>
+Description: Frequentist (EM) and Bayesian  (MCMC) Methods for Inference of  Birth-Death-Immigration Markov Chains
 License: GPL (>= 2)
-Depends: methods, lattice, numDeriv, Matrix
+Depends: numDeriv
+Imports: methods
+Suggests: MCMCpack
 LazyLoad: yes
-Packaged: 2012-01-18 04:11:40 UTC; cdoss
+Packaged: 2014-03-10 02:36:09 UTC; cdoss
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-01-18 08:22:33
+Date/Publication: 2014-03-10 17:23:37
