--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 importFrom(graphics, plot)
-importFrom(numDeriv, genD, hessian)
+importFrom(numDeriv, genD, hessian, grad)
+importFrom(lattice, trellis.device)
 import(methods)
-exportClasses(CTMC, BDMC, CTMC_PO_1, CTMC_PO_many)
+exportClasses(CTMC, BDMC, CTMC_PO_1, CTMC_PO_many, BDMC_many)
 exportMethods(BDsummaryStats, BDsummaryStats.PO)
 exportMethods(getStates, getTimes, getT, getTs)
 exportMethods(getBDMCsPOlist)
